/*
 * $Id: ChangeLog,v 1.4908 2006/03/30 06:02:36 guerra000 Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-04-04 20:00 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * include\dbedit.ch
    + added #define DE_INIT for Dbedit initialization. xHarbour extension.
  * source\rtl\dbedit.prg
    * fixed _douserfunc() to return DE_ABORT if eval() return zero.
  * tests\dbedit.prg
    * minor fix.

2006-03-29 23:56 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/compiler/gencc.c
  * source/vm/hvm.c
    * Fixed a few typos in TEXTHIDDEN implementation.

2006-03-29 16:07 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbcomp.h
    + Added struct _HB_COMP_FINALLY
    + Added member pFinally to struct _HB_LABEL_INFO

  * include/hbxvm.h
  * source/vm/hvm.c
    + Added missing extern HB_EXPORT BOOL hb_xvmEndFinally( void );

  * source/vm/hvm.c
    + Added implementation of FINALLY to xvm functionality

  * source/compiler/gencc.c
    + Added generation of FINALLY

  * source/compiler/genc.c
    * Fixed minor typo.

2006-03-29 09:30 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * makefile.pc
    + Added new gencc.c, hbpcstat.c, hbdbginf.c and hblbl.c

2006-03-29 13:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbxvm.h
  * xharbour/source/vm/hvm.c
    * casting for C++ compilation
    ! call exit( hb_vmQuit() ); instead of hb_vmQuit(); in -gc3 mode

  * xharbour/source/rtl/gtsln/gtsln.h
  * xharbour/source/rtl/gtsln/mousesln.c
    * updated included header files

2006-03-29 00:40 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbxvm.h
  * source/vm/hvm.c
    + Added missing
      HB_EXPORT void   hb_xvmPushGlobal( USHORT uiGlobal, PHB_ITEM** pGlobals );
      HB_EXPORT void   hb_xvmPushGlobalByRef( USHORT uiGlobal, PHB_ITEM** pGlobals );